src/objects/QB_Invoice_Line__c.object
<CustomObject>
    <description>The lines on the invoice.</description>
    <fields>
        <fullName>Invoice_Line_Description__c</fullName>
        <description>The description on a invoice line.</description>
        <inlineHelpText>The description on a invoice line.</inlineHelpText>
        <label>Invoice Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The number of the invoice this line belongs to.</description>
        <inlineHelpText>The number of the invoice this line belongs to.</inlineHelpText>
        <label>Invoice Number</label>
        <referenceTo>QB_Invoice__c</referenceTo>
        <relationshipLabel>QuickBooks Invoice Lines</relationshipLabel>
        <relationshipName>R00N40000001rP5dEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <description>The total amount of the invoice line.</description>
        <inlineHelpText>The total amount of the invoice line.</inlineHelpText>
        <label>Line Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>The price of the product invoiced.</description>
        <inlineHelpText>The price of the product invoiced.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product the invoice line is for.</description>
        <inlineHelpText>The product the invoice line is for.</inlineHelpText>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>QuickBooks Invoice Lines</relationshipLabel>
        <relationshipName>R00N40000001rP5xEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QB_Invoice_LINE_ID__c</fullName>
        <description>The internal ID of the invoice line in QuickBooks.</description>
        <inlineHelpText>The internal ID of the invoice line in QuickBooks.</inlineHelpText>
        <label>QuickBooks Invoice LINE ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The number of products invoiced on this line.</description>
        <inlineHelpText>The number of products invoiced on this line.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QuickBooks Invoice Line</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Invoice Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBooks Invoice Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>